--- a/html/C/static/ci.css
+++ b/html/C/static/ci.css
@@ -2,6 +2,7 @@
      background:#1d3649 
 }
  body {
+     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
      background:unset;
 }
  .main-container {
@@ -116,7 +117,7 @@
      margin-top: 80px;
      width: 64px;
      height: 64px;
-     background-image: url("../static/loader_light.gif");
+     background-image: url("./loader_light.gif");
      background-size: 64px 64px;
      background-repeat: no-repeat;
 }
@@ -368,7 +369,7 @@
      overflow: hidden;
 }
  .all-device-containers-empty {
-     background-image: url("../static/design_images/empty.svg");
+     background-image: url("./design_images/empty.svg");
      background-position: bottom center;
      background-size: 411px auto;
      background-repeat: no-repeat;
@@ -450,7 +451,7 @@
      height: 40px;
      right: 8px;
      top: 8px;
-     background-image: url("../static/design_images/menu.svg");
+     background-image: url("./design_images/menu.svg");
      background-repeat: no-repeat;
      background-position: center;
      background-color: #ffffff;
@@ -774,9 +775,9 @@
      color: #c7c7c7;
 }
  .ci-input:invalid {
-    border-width:0;
-    outline:2px solid #dc0000;
-    box-shadow:none
+     border-width:0;
+     outline:2px solid #dc0000;
+     box-shadow:none 
 }
  .button-1 {
      margin-top: 40px;
@@ -784,6 +785,16 @@
      padding-right: 40px;
      height: 48px;
      min-width: 144px;
+}
+ .button-1.button-bottom {
+     margin:0px;
+     position:absolute;
+     bottom:0px;
+     right:0px;
+     width:240px;
+     height:60px;
+     padding:10px;
+     text-align:start;
 }
  .back-button {
      position: absolute;
@@ -866,11 +877,28 @@
      top: 0px;
 }
  .empty-method-container {
-    font-size: 18px;
-    font-family: Helvetica Neue;
-    text-align: center;
-    padding-top: 100px;
-    background-position-y: 150px;
+     font-size: 18px;
+     font-family: Helvetica Neue;
+     text-align: center;
+     padding-top: 100px;
+     background-position-y: 150px;
+}
+ .line-method-container {
+     font-size: 10pt;
+     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     position: relative;
+}
+ .line-method-container > div {
+     margin: 12px 12px;
+     display: flex;
+     justify-content: space-between;
+}
+ .line-method .method-link {
+     color: #0F6DFF;
+     text-decoration: none;
+}
+ .line-method .method-link:hover {
+     text-decoration: underline;
 }
  .textbox-left {
      background-color:aliceblue;
@@ -912,17 +940,16 @@
      outline:0;
 }
  .textbox-right:invalid, .input-invalid {
-    border-width:0;
-    outline:2px solid #dc0000;
-    box-shadow:none
+     border-width:0;
+     outline:2px solid #dc0000;
+     box-shadow:none 
 }
  input[type="number"] {
      -moz-appearance: textfield;
 }
- input[type=number]::-webkit-inner-spin-button, 
- input[type=number]::-webkit-outer-spin-button { 
-    -webkit-appearance: none; 
-    margin: 0; 
+ input[type=number]::-webkit-inner-spin-button, input[type=number]::-webkit-outer-spin-button {
+     -webkit-appearance: none;
+     margin: 0;
 }
  @media (max-width: 935px) {
      .main-container.choose-main-container {
@@ -1006,4 +1033,54 @@
          margin:0;
          padding:26px;
     }
+}
+ .intime-alert {
+     visibility: hidden;
+     position: fixed;
+     top: -40px;
+     left: 0;
+     width: 100%;
+     height: 40px;
+     min-height: 40px;
+     box-sizing: border-box;
+     opacity: 0;
+     color: #000000;
+     padding: 10px 26px 0px 26px;
+     background-color: #fd8c00;
+     z-index: 12;
+     transition: all 0.3s cubic-bezier(0.85, 0, 0.9, 0.4);
+}
+ .intime-alert--visible {
+     visibility: visible;
+     opacity: 1;
+     top: 125px;
+     transition: all 0.3s cubic-bezier(0.1, 0.6, 0.15, 1);
+}
+ .intime-alert p {
+     margin-top: 0;
+}
+ hr {
+     height: 1px;
+     border: none;
+     border-color: #DCDCDC;
+     background-color: #DCDCDC;
+     color: #DCDCDC;
+}
+ .notransition {
+     -o-transition-property: none !important;
+     -moz-transition-property: none !important;
+     -ms-transition-property: none !important;
+     -webkit-transition-property: none !important;
+     transition-property: none !important;
+     -o-transform: none !important;
+     -moz-transform: none !important;
+     -ms-transform: none !important;
+     -webkit-transform: none !important;
+     transform: none !important;
+     -webkit-animation: none !important;
+     -moz-animation: none !important;
+     -o-animation: none !important;
+     -ms-animation: none !important;
+     animation: none !important;
+     opacity: 1 !important;
 }
