--- a/html/C/static/ci.css
+++ b/html/C/static/ci.css
@@ -1,8 +1,8 @@
  html {
-     background:#1d3649 
+     background:#f4f4f4 
 }
  body {
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: 'IBM Plex Sans', 'Helvetica Neue', Arial, sans-serif;
      background:unset;
 }
  .main-container {
@@ -112,7 +112,7 @@
      color: #ffffff;
      -moz-osx-font-smoothing: grayscale;
 }
- .loader {
+ .loader, .loader-dark {
      margin: 0 auto;
      margin-top: 80px;
      width: 64px;
@@ -120,6 +120,9 @@
      background-image: url("./loader_light.gif");
      background-size: 64px 64px;
      background-repeat: no-repeat;
+}
+ .loader-dark {
+     background-image: url("./loader_dark.gif");
 }
  .hidden {
      display: none !important;
@@ -476,7 +479,7 @@
      margin: 0;
      list-style: none;
      background-color: #ffffff;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size: 14px;
      box-shadow: 0 2px 2px 0 rgba(18, 18, 18, 0.2);
      z-index: 10;
@@ -506,7 +509,7 @@
      position: absolute;
      bottom: 24px;
      left: 24px;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
 }
  .self-care-section .device-container .sc-device .sc-device-info .sc-device-title {
      font-size: 14px;
@@ -669,7 +672,7 @@
      padding-left: 16px;
      padding-right: 16px;
      height: 40px;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size: 14px;
      font-weight: 700;
      border: none;
@@ -700,7 +703,7 @@
      padding-right: 16px;
      height: 40px;
      margin-right: 12px;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size: 14px;
      font-weight: 700;
      border: 1px solid #4178be;
@@ -755,7 +758,7 @@
      padding-left: 16px;
      border: 1px solid #c7c7c7;
      box-sizing: border-box;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size: 14px;
      font-weight: normal;
      outline: 0;
@@ -859,7 +862,7 @@
      top: 124px;
      left: 24px;
      margin-right:24px;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      height: 60px;
      display: flex;
 }
@@ -878,18 +881,18 @@
 }
  .empty-method-container {
      font-size: 18px;
-     font-family: Helvetica Neue;
+     font-family: inherit;
      text-align: center;
      padding-top: 100px;
      background-position-y: 150px;
 }
  .line-method-container {
      font-size: 10pt;
-     font-family: "Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      position: relative;
 }
  .line-method-container > div {
-     margin: 12px 12px;
+     margin: 12px 0px;
      display: flex;
      justify-content: space-between;
 }
@@ -912,7 +915,7 @@
      box-sizing:border-box;
      border-left-color:#4178be;
      border-right:0px;
-     font-family:"Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size:14px;
      font-weight:normal;
      outline:0;
@@ -925,7 +928,7 @@
      padding-left:16px;
      border:1px solid #c7c7c7;
      box-sizing:border-box;
-     font-family:"Helvetica Neue for IBM", "Helvetica Neue", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", sans-serif;
+     font-family: inherit;
      font-size:14px;
      font-weight:normal;
      outline:0;
