Update with v10.0.1 default pages and rules

--- a/html/C/static/ci.css
+++ b/html/C/static/ci.css
@@ -1087,3 +1087,12 @@
      animation: none !important;
      opacity: 1 !important;
 }
+
+#errId {
+  overflow: hidden;
+  position: relative;
+  color: #da1e28;
+  border-color: #da1e28;
+  top: 5px;
+  margin: 8px 0 0 0;
+}
