--- a/html/C/static/ci.css
+++ b/html/C/static/ci.css
@@ -122,7 +122,7 @@
      background-repeat: no-repeat;
 }
  .loader-dark {
-     background-image: url("./loader_dark.gif");
+     background-image: url("./loader_dark.gif") !important;
 }
  .hidden {
      display: none !important;
@@ -1086,13 +1086,4 @@
      -ms-animation: none !important;
      animation: none !important;
      opacity: 1 !important;
-}
-
-#errId {
-  overflow: hidden;
-  position: relative;
-  color: #da1e28;
-  border-color: #da1e28;
-  top: 5px;
-  margin: 8px 0 0 0;
 }
