--- a/html/C/static/css/ci/login.css
+++ b/html/C/static/css/ci/login.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 .type-input-p {
     margin-top: 40px !important;
     font-size: 8pt !important;
