--- a/html/C/static/css/ci/wait.css
+++ b/html/C/static/css/ci/wait.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 a{
   background-image: url('../../design_images/back-light.svg') !important;
 }
