--- a/html/C/static/ci-popup.css
+++ b/html/C/static/ci-popup.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
  #dialog {
      display: none;
 }
