--- a/html/C/static/css/ci/authenticate_dialog.css
+++ b/html/C/static/css/ci/authenticate_dialog.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 .type-body-m {
     font-size: 10pt !important;
 }
