--- a/html/C/static/css/ci/jit_enroll.css
+++ b/html/C/static/css/ci/jit_enroll.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 .layout-top {
   background-color: #1d3649 !important;
 }
