--- a/html/C/static/css/ci/try_push.css
+++ b/html/C/static/css/ci/try_push.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 a {
 	color: #0F6DFF !important;
 }
