--- a/html/C/static/design.css
+++ b/html/C/static/design.css
@@ -1,3 +1,4 @@
+/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
 em {
   font-style:inherit;
   font-weight:700;
