--- a/html/C/static/design.css
+++ b/html/C/static/design.css
@@ -800,6 +800,9 @@ h4 {
  #warning {
      visibility: hidden;
 }
+#warning107 {
+    visibility: hidden;
+}
  .bx--text__input {
      border-radius: 0;
      font-family: inherit;
@@ -1062,4 +1065,85 @@ h4 {
     background-position: 0;
     width: 60px;
     height: 2rem;
+}
+
+.bx--skeleton__placeholder {
+  position: relative;
+  border: none;
+  padding: 0;
+  -webkit-box-shadow: none;
+  box-shadow: none;
+  pointer-events: none;
+  background: #e5e5e5;
+  height: 6.25rem;
+  width: 6.25rem;
+}
+.bx--skeleton__placeholder:hover,
+.bx--skeleton__placeholder:focus,
+.bx--skeleton__placeholder:active {
+  border: none;
+  outline: none;
+  cursor: default;
+}
+.bx--skeleton__placeholder:before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: #bebebe;
+  -webkit-animation: 3000ms ease-in-out skeleton infinite;
+  animation: 3000ms ease-in-out skeleton infinite;
+}
+
+@keyframes skeleton {
+  0% {
+    width: 0%;
+    left: 0;
+    right: auto;
+    opacity: 0.3;
+  }
+  20% {
+    width: 100%;
+    left: 0;
+    right: auto;
+    opacity: 1;
+  }
+  28% {
+    width: 100%;
+    left: auto;
+    right: 0;
+  }
+  51% {
+    width: 0%;
+    left: auto;
+    right: 0;
+  }
+  58% {
+    width: 0%;
+    left: auto;
+    right: 0;
+  }
+  82% {
+    width: 100%;
+    left: auto;
+    right: 0;
+  }
+  83% {
+    width: 100%;
+    left: 0;
+    right: auto;
+  }
+  96% {
+    width: 0%;
+    left: 0;
+    right: auto;
+  }
+  100% {
+    width: 0%;
+    left: 0;
+    right: auto;
+    opacity: 0.3;
+  }
 }
