--- a/html/C/static/css/ci/common.css
+++ b/html/C/static/css/ci/common.css
@@ -1,4 +1,4 @@
-/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
+/* Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. */
 #dialog {
     z-index: 2000 !important;
     box-sizing: initial !important;
