--- a/html/C/static/css/ci/usc.css
+++ b/html/C/static/css/ci/usc.css
@@ -1,4 +1,4 @@
-/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
+/* Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. */
 html {
   background: #f4f4f4 !important;
 }
