--- a/html/C/static/css/ci/username.css
+++ b/html/C/static/css/ci/username.css
@@ -1,4 +1,4 @@
-/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
+/* Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. */
 .username-p {
     margin-top:40px !important;
     margin-bottom:8px !important;
