--- a/html/C/static/css/ci/verify_registration.css
+++ b/html/C/static/css/ci/verify_registration.css
@@ -1,4 +1,4 @@
-/* Copyright contributors to the IBM Security Verify Access and Verify SaaS Strong Authentication Integration project. */
+/* Copyright contributors to the IBM Verify Identity Access and Verify SaaS Strong Authentication Integration project. */
 .loader {
 	background-image: url('../../loader_light.gif') !important;
 	margin-top: 40px !important;
